--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,15 @@
 pipeline{
     agent any
     stages{
-        stage{"Checkout code"}{
+        stage("checkout code") {
             steps{
-                sh"git clone https://github.com/Ruta19/DemoProject.git"
+                sh "https://github.com/Ruta19/DemoProject.git"
             }
         }
-        stage("check the docker version"){
+        stage("check docker version") {
             steps{
-                sh " sudo docker version"
+                sh "sudo docker version"
             }
-        }
         }
     }
+}
